# FelisssTattooCRM

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
generated_files/: cmake_vars.h.in
libs/: CMakeLists.txt
libs/sqlite/: CMakeLists.txt
samples/: config.json  felisss_tattoo.service
samples/felisss_tattoo/: config.json
scripts/: run_clang_format.sh  run_clang_tidy.sh
src/: main.cpp
src/bot_manager/: bot_manager.cpp  bot_manager.h  client_chat_status.cpp  client_chat_status.h  consts.h  timer.cpp  timer.h
src/config_manager/: config_manager.cpp  config_manager.h
src/database_manager/: admins_table.cpp  admins_table.h  customers_table.cpp  customers_table.h  database_manager.cpp  database_manager.h  database_manager_tools.cpp  database_manager_tools.h  database_manager_types.h  material_alarm_users.cpp  material_alarm_users.h  material_critical_amount.cpp  material_critical_amount.h  materials_table.cpp  materials_table.h  sessions_table.cpp  sessions_table.h  tattoo_artists_table.cpp  tattoo_artists_table.h  users_table.cpp  users_table.h
src/felisss_logger/: felisss_logger.cpp  felisss_logger.h
